@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.4.40
 
+  *) mod_md: Store permissions are enforced on file creation, enforcing restrictions in
+     spite of umask. Fixes <https://github.com/icing/mod_md/issues/117>. [Stefan Eissing]
+
 Changes with Apache 2.4.39
   *) SECURITY: CVE-2019-0197 (cve.mitre.org)
      mod_http2: fixes a possible crash when HTTP/2 was enabled for a http:
